# BL4S-2026-MRB-Simulation

./: .gitignore  CMakeLists.txt  GCRSimulation.cc  README.md
include/: MRBActionInitialization.hh  MRBCaloSD.hh  MRBDWCSD.hh  MRBDetectorConstruction.hh  MRBDetectorConstruction.hh~  MRBEventAction.hh  MRBEventAction.hh~  MRBPrimaryGeneratorAction.hh  MRBPrimaryGeneratorAction.hh~  MRBRunAction.hh  MRBScintillatorSD.hh  MRBWendiHit.hh  MRBWendiSD.hh  MRBWendiSD.hh~
macs/: run_all.mac  vis.mac
src/: MRBActionInitialization.cc  MRBActionInitialization.cc~  MRBCaloSD.cc  MRBDWCSD.cc  MRBDWCSD.cc~  MRBDetectorConstruction.cc  MRBDetectorConstruction.cc~  MRBEventAction.cc  MRBEventAction.cc~  MRBPrimaryGeneratorAction.cc  MRBPrimaryGeneratorAction.cc~  MRBRunAction.cc  MRBRunAction.cc~  MRBScintillatorSD.cc  MRBWendiSD.cc  MRBWendiSD.cc~
